@@ -133,9 +133,12 @@ function mapIconType(item, app, type) {
             return true;
         }
     }
+    if (lmsIcon.indexOf("imageproxy/")>=0) {
+        return false;
+    }
     try {
         for (const [key, value] of Object.entries(iconMap["endsWith"])) {
-            if (lmsIcon.endsWith(key) || (lmsIcon.indexOf('imageproxy')>0 && lmsIcon.endsWith(key.substring(1)+"/image.png"))) {
+            if (lmsIcon.endsWith(key) || lmsIcon.endsWith(key+"/image.png")) {
                 let entry = undefined!=app && undefined!=value[app] ? value[app] : value;
                 if (entry['icon']) {
                     item.image=item[value]=item.svg=undefined; item.icon=entry['icon'];
